--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,23 @@ body {
 .ReactCollapse--collapse {
   transition: height 500ms;
 }
+
+/* SCROLLBAR */
+body {
+  overflow-y: scroll;
+}
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #aaa;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #777;
+}
