--- a/src/index.css
+++ b/src/index.css
@@ -28,13 +28,13 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #bbb;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #aaa;
+  background: #777;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #777;
+  background: #666;
 }
